2006-09-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: add NSL paths
	* src/lib/socklib.c: working up library

2006-09-24  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated release notes
	* NEWS: updated release notes
	* doc/manual/news.texi: updated release notes

	* src/lib/socklib.c: working up library

2006-09-23  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated news
	* doc/manual/news.texi: updated news
	* NEWS: updated news

2006-09-22  Brian Bidulock  <bidulock@openss7.org>

	* doc/.cvsignore: ignore doxygen generated paths
	* strsock.dox.in: added main page documentation

2006-09-18  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added doxy rules
	* doc/manual/news.texi: added release note

	* src/include/sys/sockio.h: added doxygen markers
	* src/include/sys/socklib.h: added doxygen markers
	* src/include/sys/sockmod.h: added doxygen markers
	* src/include/sys/sockpath.h: added doxygen markers
	* src/include/sys/socksys.h: added doxygen markers
	* src/lib/pthread.c: added doxygen markers
	* src/lib/socket.c: added doxygen markers
	* src/lib/socklib.c: added doxygen markers
	* src/lib/sockpath.c: added doxygen markers
	* src/util/soconfig.c: added doxygen markers

2006-09-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man3/endsockpath.3.man: trying to pass make check
	* doc/man/man3/freesockpathent.3.man: trying to pass make check
	* doc/man/man3/getsockpath.3.man: trying to pass make check
	* doc/man/man3/getsockpathent.3.man: trying to pass make check
	* doc/man/man3/libsocklib.3.man: trying to pass make check
	* doc/man/man3/setsockpath.3.man: trying to pass make check
	* doc/man/man3/socklib.3.man: trying to pass make check
	* doc/man/man3/sockpath.3.man: trying to pass make check
	* doc/man/man3/sp_errbuf.3.man: trying to pass make check
	* doc/man/man3/sp_error.3.man: trying to pass make check
	* doc/man/man3/sp_perror.3.man: trying to pass make check