@@ -1,5 +1,7 @@
 2006-09-25  Brian Bidulock  <bidulock@openss7.org>
 
+	* acinclude.m4: reordered includes
+
 	* acinclude.m4: add NSL paths
 	* src/lib/socklib.c: working up library
 
